list line spacing fix

--- a/static/base.css
+++ b/static/base.css
@@ -12,10 +12,13 @@ body {
   font-size: 18px;
 }
 
-p {
-  text-indent: 20px;
+p, li {
   line-height: 2em;
   text-rendering: optimizeLegibility;
+}
+
+p {
+  text-indent: 2em;
 }
 
 img {
